--- a/example/build.gradle
+++ b/example/build.gradle
@@ -49,8 +49,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
 
-//    implementation project(':library')
-    implementation 'com.github.nadileaf:zhaohu-sdk-android:v0.1.0-alpha'
+    implementation project(':library')
+//    implementation 'com.github.nadileaf:zhaohu-sdk-android:v0.1.0-alpha'
 
     // Core library
     androidTestImplementation 'androidx.test:core:1.2.0'
