--- a/example/build.gradle
+++ b/example/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.mesoor.sdk.example"
-        minSdkVersion 20
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -49,8 +49,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
 
-    implementation project(':library')
-//    implementation 'com.github.nadileaf:zhaohu-sdk-android:v0.3.0-alpha'
+    // implementation project(':library')
+    implementation 'com.github.nadileaf:zhaohu-sdk-android:v1.0.0-beta'
 
     // Core library
     androidTestImplementation 'androidx.test:core:1.2.0'
